--- a/Personal Site/Pages/Primrose.cshtml
+++ b/Personal Site/Pages/Primrose.cshtml
@@ -1,8 +1,9 @@
 ﻿@page
 @{
-    ViewData["Title"] = "Sean T. McBeth: engineer, photographer, mad scientist";
-    ViewData["Keywords"] = "software development, software engineering, programming, freelancing, Sean T. McBeth, embedded programming, virtual reality, agumented reality, VR, AR, 3D, graphics programming, game development, simulation, abstract data visualization, audio synthesis, signals processing, computer vision, peer-to-peer, networking, desktop software, Web applications, mobile apps, WebRTC, hardware, embedded systems, reporting, GIS, databases";
-    ViewData["Description"] = "Sean T. McBeth is a software engineer and dad.";
+    ViewData["SubURL"] = "primrose";
+    ViewData["Title"] = "Sean T. McBeth: Project Primrose";
+    ViewData["Description"] = "Primrose was the world's first JavaScript framework for developing WebXR applications";
+    ViewData["Screenshot"] = "/img/primrose.jpeg";
 }
 
 <section id="projects"
