--- a/Personal Site/Pages/VR.cshtml
+++ b/Personal Site/Pages/VR.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model SeanMcBeth.Pages.VRModel
 @{
+    ViewData["SubURL"] = "vr";
     ViewData["Title"] = "Sean T. McBeth: other info";
 }
 
