--- a/Personal Site/Pages/DLSVR.cshtml
+++ b/Personal Site/Pages/DLSVR.cshtml
@@ -1,16 +1,16 @@
 ﻿@page
 @{
-    ViewData["Title"] = "Sean T. McBeth: engineer, photographer, mad scientist";
-    ViewData["Keywords"] = "software development, software engineering, programming, freelancing, Sean T. McBeth, virtual reality, agumented reality, VR, AR, 3D, graphics programming, game development, simulation, abstract data visualization, audio synthesis, signals processing, computer vision, peer-to-peer, networking, desktop software, Web applications, mobile apps, WebRTC, reporting, GIS, databases";
-    ViewData["Description"] = "Sean T. McBeth is a software engineer and dad.";
+    ViewData["SubURL"] = "dlsvr";
+    ViewData["Title"] = "Sean T. McBeth: Project Yarrow";
+    ViewData["Description"] = "DLS VR is a multiuser, multimodal, Web-based VR application that includes a full, online editor, designed for subject matter experts to be able to rapidly create new immersion scenarios.";
+    ViewData["Screenshot"] = "/img/dlsvr/screen1.jpeg";
 }
 
 <section id="projects"
          aria-label="projects">
     <h2>Diplomatic Language Services Virtual Reality</h2>
     <p>
-        DLS VR is a multiuser, multimodal, Web-based VR application that includes a full, online editor, designed for
-        subject matter experts to be able to rapidly create new immersion scenarios. <a href="https://vr.dlsdc.com" target="_blank">View a live demo of DLS VR</a>.
+        @ViewData["Description"] <a href="https://vr.dlsdc.com" target="_blank">View a live demo of DLS VR</a>.
     </p>
 
     <img src="~/img/dlsvr/landing.jpeg" alt="Screenshot of DLS VR Landing Page" title="DLS VR Landing Page" />
