--- a/Personal Site/Pages/Other.cshtml
+++ b/Personal Site/Pages/Other.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model SeanMcBeth.Pages.OtherModel
 @{
+    ViewData["SubURL"] = "other";
     ViewData["Title"] = "Sean T. McBeth: other info";
 }
 
