--- a/Personal Site/Pages/DLSVR.cshtml
+++ b/Personal Site/Pages/DLSVR.cshtml
@@ -16,53 +16,78 @@
     <img src="~/img/dlsvr/landing.jpeg" alt="Screenshot of DLS VR Landing Page" title="DLS VR Landing Page" />
 
     <p>
-        I built DLS VR from scratch, over the course of approximately 4 years, in tight collaboration with the Language Training Department (LT).
-        In "seeking first to understand", I took a language course from one of our instructors to gain first-hand knowledge
-        of the student experience at DLS. I incorporated several experienced instructors and curriculum designers directly into the
-        project planning and development process. The LT department and I worked together to collect the latest research in EdTech
-        and VR for language training to incorporate into the project. And I instituted bi-monthly and quarterly meetings pulling
-        all stakeholders together to ensure every voice was heard.
+        As the Head of Immersive Software, I developed and managed projects enhancing DLS'
+        foreign language instruction services. Created DLS VR, a web-based immersive
+        language and cultural learning application, including an online editor and
+        student activity reports.
     </p>
 
     <p>
-        DLS VR uses the <a href="https://threejs.org">Three.js</a> library and my <a href="https://github.com/capnmidnight/Juniper/">Juniper</a> library,
-        to run on desktop computers, mobile devices, and VR headsets. Users in the VR front end see each other as a synthetic
-        avatar, with spatialized voice chat, shared pointers, and full body language through shared head and hand tracking.
+        The project was developed in close collaboration with the Language Training
+        Department, incorporating expert instructors and curriculum designers. The
+        user-friendly online editor allowed non-technical subject matter experts to create
+        immersive scenarios, while performance reports tracked student engagement. Product
+        design process included attending a language course to gain first-hand knowledge of
+        the student experience, implementing regular meetings with stakeholders, and
+        surveying latest research in VR UI design.
+    </p>
+
+    <p>
+        I built DLS VR from scratch, over the course of approximately 4 years, using the 
+        <a href="https://threejs.org">Three.js</a> library and my own
+        <a href="https://github.com/capnmidnight/Juniper/">Juniper</a> library, to run on 
+        desktop computers, mobile devices, and VR headsets. Users in the VR front-end see 
+        each other as a synthetic avatar, with spatialized voice chat, shared pointers, and 
+        full body language through shared head and hand tracking. I also created several
+        user comfort mitigitations in the app, including aggressive performance optimization,
+        teleportation locomotion, near-field UI elements and a synthetic floor to avoid 
+        vertigo in monoscopic 360° imagery, spatialized environmental audio to enhance
+        orientation senses, and an intent-preserving gesturing system to keep avatars visually
+        separated while still allowing them to point at imagery details.
+    </p>
+
+    <p>
+        DLS VR was selected as a finalist for the
+        <a href="https://thelanguageflagship.tech/" target="_blank">Language Flagship Technology Innovation Center</a>'s
+        <a href="https://thelanguageflagship.tech/launchpad/" target="_blank">LaunchPad 2023 event</a>,
+        a <a href="https://dlnseo.org/" target="_blank">Defense Language and National Security Education Office</a> sponsored initiative.
     </p>
 
     <img src="~/img/dlsvr/screen1.jpeg" alt="Screenshot from DLS VR" title="Users meeting together in DLS VR" />
 
     <p>
-        Following my belief that technology should be used to help great people do even better work, I designed a "guided tour" metaphor for
-        the application. Unlike competitor VR language training applications that put students on their own inside in a fixed environment,
-        DLS VR serves as supplement to our existing, accredited, best-in-class, instructor-led training, allowing students and instructors to
-        interact in real-life locations. Participants engage in open-ended discussion about the culture of their target language through the
-        visuals they see, listen to voice-overs, and watch videos providing historical details, and practice role-play scenarios <em>in situ</em>.
+        Following my belief that technology should be used to help great people do even better
+        work, I designed a "guided tour" metaphor for the application. Unlike competitor VR 
+        language training applications that put students on their own inside in a fixed 
+        environment, DLS VR serves as supplement to our existing, accredited, best-in-class, 
+        instructor-led training, allowing students and instructors to interact in real-life
+        locations. Participants engage in open-ended discussion about the culture of their
+        target language through the visuals they see, listen to voice-overs, and watch videos
+        providing historical details, and practice role-play scenarios <em>in situ</em>.
     </p>
 
     <img src="~/img/dlsvr/screen2.jpeg" alt="Screenshot from DLS VR" title="Users roleplaying together in DLS VR" />
 
     <p>
-        The backend editor is a Google Maps-based application that allows instructors and curriculum developers to self-service their own
-        creation of scenarios, without bottlenecking on requiring input from developers or 3D modelers. Scenarios are designed around
-        a travel narrative using Google Street View imagery. Scenario designers can add spatialized background audio to enhance the
-        immersion of the scenario, as well as a wide variety of pedagogical materials: callout images, vocabulary cards,
-        videos, listening tasks, reading tasks, and role-play stations. Instructors can also see reports on student activity, including
-        how much and how long they performed the material, as well as how long they directed their attention to each, individual piece
-        of media provided in the scenario.
+        The backend editor is a Google Maps-based application that allows instructors and 
+        curriculum developers to self-service their own creation of scenarios, without 
+        bottlenecking on requiring input from developers or 3D modelers. Scenarios are 
+        designed around a travel narrative using Google Street View imagery. Scenario 
+        designers can add spatialized background audio to enhance the immersion of the 
+        scenario, as well as a wide variety of pedagogical materials: callout images,
+        vocabulary cards, videos, listening tasks, reading tasks, and role-play stations. 
+        Instructors can also see reports on student activity, including how much and how 
+        long they performed the material, as well as how long they directed their 
+        attention to each, individual piece of media provided in the scenario.
     </p>
 
     <img src="~/img/dlsvr/screen3.jpeg" alt="Screenshot from DLS VR" title="The DLS VR Editor" />
 
     <p>
-        I also managed a fleet of 35 Meta Quest 2 headsets and built VR training labs at each of DLS' three locations. I was heavily
-        involved in developing marketing materials, promoting the project with students and instructors, facilitating training sessions,
-        training new students, instructors, and content developers on using the system, speaking at conferences and webinars to promote
-        VR as a valuable tool for language training, demoing, and selling the system to clients, and searching for business partnerships
-        to sublicense the software.
-    </p>
-
-    <p>
-        I had direct supervisor responsibility for one fulltime employee and served as mentor for other employees within the company.
+        I also established VR training labs across all three DLS locations and managed a 
+        fleet of 35 Meta Quest 2 headsets. My involvment extended to marketing, training,
+        conference presentations, software sales, and business partnership development. 
+        Additionally, I supervised one full-time employee and mentored others within the 
+        company.
     </p>
 </section>
