--- a/Personal Site/Pages/DLSVR.cshtml
+++ b/Personal Site/Pages/DLSVR.cshtml
@@ -39,7 +39,7 @@
         desktop computers, mobile devices, and VR headsets. Users in the VR front-end see 
         each other as a synthetic avatar, with spatialized voice chat, shared pointers, and 
         full body language through shared head and hand tracking. I also created several
-        user comfort mitigitations in the app, including aggressive performance optimization,
+        user comfort mitigations in the app, including aggressive performance optimization,
         teleportation locomotion, near-field UI elements and a synthetic floor to avoid 
         vertigo in monoscopic 360° imagery, spatialized environmental audio to enhance
         orientation senses, and an intent-preserving gesturing system to keep avatars visually
@@ -69,12 +69,12 @@
     <img src="~/img/dlsvr/screen2.jpeg" alt="Screenshot from DLS VR" title="Users roleplaying together in DLS VR" />
 
     <p>
-        The backend editor is a Google Maps-based application that allows instructors and 
+        The back-end editor is a Google Maps-based application that allows instructors and 
         curriculum developers to self-service their own creation of scenarios, without 
         bottlenecking on requiring input from developers or 3D modelers. Scenarios are 
         designed around a travel narrative using Google Street View imagery. Scenario 
         designers can add spatialized background audio to enhance the immersion of the 
-        scenario, as well as a wide variety of pedagogical materials: callout images,
+        scenario, as well as a wide variety of pedagogical materials: call-out images,
         vocabulary cards, videos, listening tasks, reading tasks, and role-play stations. 
         Instructors can also see reports on student activity, including how much and how 
         long they performed the material, as well as how long they directed their 
@@ -85,7 +85,7 @@
 
     <p>
         I also established VR training labs across all three DLS locations and managed a 
-        fleet of 35 Meta Quest 2 headsets. My involvment extended to marketing, training,
+        fleet of 35 Meta Quest 2 headsets. My involvement extended to marketing, training,
         conference presentations, software sales, and business partnership development. 
         Additionally, I supervised one full-time employee and mentored others within the 
         company.
