--- a/Personal Site/Pages/Index.cshtml
+++ b/Personal Site/Pages/Index.cshtml
@@ -86,7 +86,7 @@
 
     <p>
         I'm currently on the market for a new position. I live in Alexandria, Virginia, with my wife and 2 kids. I'm open to 100% remote projects
-        anywhere, or hybrid work in the Arlington/Alexandria area. I'm interested in technical lead or project managment positions for projects
+        anywhere, or hybrid work in the Arlington/Alexandria area. I'm interested in technical lead or project management positions for projects
         in VR, AR, audio, and/or AI, especially in the training and education markets.
     </p>
 
@@ -136,7 +136,7 @@
 
     <ul>
         <li>
-            <a href="https://calico.org/sigs/virtual-worlds/">CALICO Immersive Realities SIG</a> (2023): A colleauge and I gave a
+            <a href="https://calico.org/sigs/virtual-worlds/">CALICO Immersive Realities SIG</a> (2023): A colleague and I gave a
             presentation and answered extensive Q+A on designing proficiency-oriented virtual reality scenarios for foreign
             language training.
         </li>
