--- a/Personal Site/Pages/Juniper.cshtml
+++ b/Personal Site/Pages/Juniper.cshtml
@@ -88,7 +88,7 @@
     <h3>2023</h3>
     <ul>
         <li>
-            <a href="https://calico.org/sigs/virtual-worlds/">CALICO Immersive Realities SIG</a>: A colleauge and I gave a
+            <a href="https://calico.org/sigs/virtual-worlds/">CALICO Immersive Realities SIG</a>: A colleague and I gave a
             presentation and answered extensive Q+A on designing proficiency-oriented virtual reality scenarios for foreign
             language training.
         </li>
