--- a/Personal Site/Pages/Other.cshtml
+++ b/Personal Site/Pages/Other.cshtml
@@ -80,7 +80,7 @@
     <p>Here are some of the projects I had worked on in the past, that are either now finished or defunct.</p>
     <h3>Virtual and Augmented Reality Projects</h3>
     <ul>
-        <li><a href="https://vr.dlsdc.com" target="_blank">DLS VR</a>: a Web-based Virtual Reality platform for students of foriegn language to practice conversational skills and learn about culture.</li>
+        <li><a href="https://vr.dlsdc.com" target="_blank">DLS VR</a>: a Web-based Virtual Reality platform for students of foreign language to practice conversational skills and learn about culture.</li>
         <li><a href="https://github.com/capnmidnight/plume" target="_blank">Plume</a>: a VR teleconferencing system for the Web</li>
         <li>
             <a href="https://www.youtube.com/watch?v=PWvPEEpLCT0&amp;feature=youtu.be&amp;t=55" target="_blank">Smart-city VR diorama</a>: with:
@@ -135,7 +135,7 @@
         <li><a href="http://sean-mcbeth.tumblr.com/tagged/Ireland" target="_blank">Photography from Ireland</a>:</li>
         <li><a href="http://sean-mcbeth.tumblr.com/tagged/Galapagos" target="_blank">Photography and writing on the Galapagos Islands</a>:</li>
         <li><a href="http://sean-mcbeth.tumblr.com/tagged/abstract" target="_blank">Abstract photography with prisms</a>:</li>
-        <li><a href="http://www.amazon.com/dp/B00J3XY6N2" target="_blank">Three Years: an ebook</a>:</li>
+        <li><a href="http://www.amazon.com/dp/B00J3XY6N2" target="_blank">Three Years: an eBook</a>:</li>
     </ul>
     <h2><a name="volunteer">Past Community Work</a></h2>
     <p>These are some of the volunteer positions I've held in the past.</p>
