--- a/Personal Site/Pages/Index.cshtml
+++ b/Personal Site/Pages/Index.cshtml
@@ -68,26 +68,22 @@
     <h2>Bio</h2>
 
     <p>
-        I am a cross-disciplinary technical lead and project manager with 20 years of professional experience. My most recent
-        work is focused on Immersive Media (Virtual and Augmented Reality) for training and adult education. I've successfully
-        bootstrapped and deployed multiple <abbr>VR</abbr> and <abbr>AR</abbr> projects over the last 8 years. Before <abbr>VR</abbr>,
-        I worked primarily on Web and desktop applications for GIS, database management and reporting (Online Transaction Processing),
-        and industrial simulation.
+        I'm a cross-disciplinary Product Manager/Project Manager/Technical Lead, with 20 years of professional experience. I've successfully
+        bootstrapped and deployed multiple <abbr>VR</abbr> and <abbr>AR</abbr> projects in WebXR and Unity3D over 
+        the last 8 years. 
     </p>
 
     <p>
-        The programming languages I work in most often are C#, TypeScript, HTML, and CSS. I'm also very experienced with SQL on MS SQL Server and PostgreSQL.
+        I'm interested in projects in VR, AR, audio, and/or AI, especially in the training and education markets. 
+        I live in Alexandria, Virginia, with my wife and 2 kids. 
+        I'm open to 100% remote projects anywhere, or hybrid work in the Arlington/Alexandria area. 
     </p>
 
     <p>
         In my free time, I dabble in AI (genetic algorithms, interfacing with OpenAI's large language models), embedded software development
-        (Arduino and Adafruit Feather microcontrollers), photography, woodworking, and wine making.
-    </p>
-
-    <p>
-        I'm currently on the market for a new position. I live in Alexandria, Virginia, with my wife and 2 kids. I'm open to 100% remote projects
-        anywhere, or hybrid work in the Arlington/Alexandria area. I'm interested in technical lead or project management positions for projects
-        in VR, AR, audio, and/or AI, especially in the training and education markets.
+        (Arduino and Adafruit Feather microcontrollers), photography, woodworking, and wine making. Before <abbr>VR</abbr>,
+        I worked primarily on Web and desktop applications for GIS, database management and reporting (Online Transaction Processing),
+        and industrial simulation.
     </p>
 
 </section>
@@ -100,7 +96,7 @@
 
     <figure>
         <h3>Diplomatic Language Services Virtual Reality</h3>
-        <img src="~/img/dlsvr/landing.jpeg" alt="Screenshot of DLS VR Landing Page" title="DLS VR Landing Page" />
+        <img src="~/img/dlsvr/screen1.jpeg" alt="Screenshot of DLS VR Landing Page" title="DLS VR Landing Page" />
         <figcaption>
             DLS VR is a multiuser, multimodal, Web-based VR application that includes a full, online editor, designed for
             subject matter experts to be able to rapidly create new immersion scenarios.
