--- a/Personal Site/Pages/Shared/_Layout.cshtml
+++ b/Personal Site/Pages/Shared/_Layout.cshtml
@@ -57,6 +57,7 @@
         }
     }
 
+    <link rel="icon" type="image/png" href="~/favicon.png" />
     <link rel="stylesheet" type="text/css" href="~/css/index.css?v@(version)">
 
     @RenderSection("Head", required: false)
