update resume (again)

--- a/Personal Site/Pages/Index.cshtml
+++ b/Personal Site/Pages/Index.cshtml
@@ -45,7 +45,7 @@
         ("Follow Sean on LinkedIn", "linkedin", "https://www.linkedin.com/pub/sean-mcbeth/6/727/378", null),
         ("Follow Sean on Twitter", "twitter", "https://twitter.com/Sean_McBeth", null),
         ("Email Sean", "email", "mailto:sean@removethis.seanmcbeth.com", null),
-        ("Download Sean's résumé (PDF 180KB)", "resume", "Resume-Sean_McBeth-2023.pdf", null)
+        ("Download Sean's résumé (PDF)", "resume", "Resume-Sean_McBeth-2023.pdf", null)
         })
             {
                 <li>
@@ -74,7 +74,7 @@
     </p>
 
     <p>
-        I'm interested in projects in VR, AR, audio, and/or AI, especially in the training and education markets. 
+        I'm interested in projects in VR, AR, audio, and/or AI, especially in the productivity, training, and education markets. 
         I live in Alexandria, Virginia, with my wife and 2 kids. 
         I'm open to 100% remote projects anywhere, or hybrid work in the Arlington/Alexandria area. 
     </p>
