--- a/Marxent Labs Test/index.css
+++ b/Marxent Labs Test/index.css
@@ -68,6 +68,8 @@ a.button {
   margin: 0;
 }
 #frontBuffer {
+  box-shadow: var(--box-shadow-color) 5px 5px 5px;
+  touch-action: none;
   width: 100%;
   height: 100%;
 }
